# diner_backend

./: .env.example  .gitignore  .rusty-hook.toml  .tarpaulin.toml  Cargo.toml  Dockerfile  Makefile  README.md  secrets.env  spec.yaml  sqlx-data.json
.github/workflows/: github-actions.yml
.sqlx/: query-223a06b7b0dad03d1446506b6e8f0a9388a88391f372df34232cd94cb7c7cb21.json  query-4ba2b6b6d7d0a857ddbb7be8bc1a89470f179a434133a65bb215456fdca06200.json  query-6e366c98aaa0108318f3efbd1d86d8ba90c2e87b4cefad6fb4f2dbe8b9c3451a.json  query-8d0f3680292336cc7f24d6e926c6d9034a1b699f0d952ac14e494f8373deb178.json  query-9825325efcf8e791028ee2b902b5c304dd64ba62cedf732708cc04833aa5ff87.json  query-b07002c5260d334624eadceb3b82c16dffa1a4ec2f73337641a0126213d39963.json  query-da0cbe46cd3bf559f1507aba5ab0ca49167cdabe1222baabc16f848cced5fb7d.json  query-dcd92b748a76474860d291133fc5429bba329f8a56bd729f49f94bfca37a7bd0.json  query-e6156ba94ee5b349dd9828c4312f0020b32335973c405df72f7c5b2d44d171bd.json
configuration/: base.yaml  base.yaml.example  local.yaml  production.yaml
migrations/: 20230803152025_create_games_table.sql  20230803183129_create_users_table.sql  20230803183317_create_users_games_table.sql
scripts/: cert.sh  ci.sh  init_db.sh  stop_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/connectors/: discord.rs  mod.rs  oauth.rs  session.rs
src/domain/: game.rs  game_description.rs  game_link.rs  game_name.rs
src/models/: game.rs  user.rs
src/routes/: games.rs  mod.rs  oauth.rs
src/scopes/: auth.rs  mod.rs  oauth.rs
src/scopes/api/: games.rs  mod.rs  users.rs
src/scopes/api/models/: game.rs  user.rs
src/scopes/api/types/: games.rs  mod.rs  users.rs
src/types/: game.rs  game_description.rs  game_link.rs  game_name.rs  mod.rs  user.rs
tests/: common.rs  games.rs  health_check.rs
tests/api/: favorites.rs  games.rs  health_check.rs  helpers.rs  main.rs  oauth.rs
