[package]
name = "diner_backend"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "diner_backend"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13.3"
hmac = "0.12.1"
openssl = { version = "0.10", features = ["v110"] }
reqwest = "0.11"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
serde-aux = "4"
sha2 = "0.10.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
delay_map = "0.3.0"

[dependencies.oauth2]
version = "4.2"
features = ["reqwest"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
cargo-watch = "8.4.0"
once_cell = "1"
rstest = "0.16"
rusty-hook = "^0.11.2"
