[package]
name = "diner_backend"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "diner_backend"

[lib]
path = "src/lib.rs"

[dependencies]
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = { version = "4", features = ["openssl"] }
chrono = { version = "0.4.34", default-features = false, features = ["clock"] }
config = "0.13"
delay_map = "0.3"
hmac = { version = "0.12", features = ["std"] }
redis = "0.23"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
serde-aux = "4"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
url = "2.4"
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies.oauth2]
version = "4.2"
features = ["reqwest"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
cargo-watch = "8.5"
fake = "2.9"
once_cell = "1"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rstest = "0.18"
rusty-hook = "^0.11"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
